진비 : 보호중, 실종신고 상세페이지 생성

--- a/boho.html
+++ b/boho.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/boho.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
 </head>
 
 
@@ -148,6 +150,7 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 : 2024-04-02</p>
                         <p>발견장소 : 충북 백봉3길</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
 
@@ -163,10 +166,9 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-05-05</p>
                         <p>발견장소 : 경기 안산 상록구</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
-
-
 
                 <div class="gallery-item" data-location="시바" data-gender="암컷" data-lostdate="2024-06-09">
 
@@ -181,11 +183,9 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 : 2024-06-09</p>
                         <p>발견장소 : 경기 여주 강천면</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
-
-
-
 
                 <!-- 두 번째 줄 -->
                 <div class="gallery-item" data-location="치와와" data-gender="암컷" data-lostdate="2024-01-09">
@@ -200,9 +200,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-01-09</p>
                         <p>발견장소 : 충남 음봉면</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="포메라니안" data-gender="수컷" data-lostdate="2024-04-10">
 
                     <img src="boho/bohoimg/lang5.jpg" alt="Image 5">
@@ -216,9 +217,10 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-04-10</p>
                         <p>발견장소 : 충남 아산시</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="진돗개" data-gender="암컷" data-lostdate="2024-04-24">
 
                     <img src="boho/bohoimg/lang6.jpeg" alt="Image 6">
@@ -232,10 +234,9 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-04-24</p>
                         <p>발견장소 : 인천 을왕리</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
-
 
                 <!-- 세 번째 줄 -->
                 <div class="gallery-item" data-location="말티즈" data-gender="수컷" data-lostdate="2024-03-15">
@@ -251,9 +252,10 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-03-15</p>
                         <p>발견장소 : 경기 화성 화계동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="시바" data-gender="수컷" data-lostdate="2024-01-01">
 
                     <img src="boho/bohoimg/lang8.jpg" alt="Image 8">
@@ -267,9 +269,11 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-01-01</p>
                         <p>발견장소 : 대구 북구 침산공원</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                     </a>
                 </div>
+
                 <div class="gallery-item" data-location="진돗개" data-gender="수컷" data-lostdate="2024-02-24">
 
                     <img src="boho/bohoimg/lang9.jpeg" alt="Image 9">
@@ -283,8 +287,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-02-24</p>
                         <p>발견장소 : 충북 흥덕구 가경동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 네 번째 줄 -->
@@ -301,6 +305,7 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-05-09</p>
                         <p>발견장소 : 경기 하남 춘궁동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
 
@@ -316,9 +321,10 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-07-19</p>
                         <p>발견장소 : 경기 양양고속도로</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-02-18">
 
                     <img src="boho/bohoimg/lang12.jpeg" alt="Image 12">
@@ -332,8 +338,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-02-18</p>
                         <p>발견장소 : 경기 남양주</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 다섯 번째 줄 -->
@@ -350,9 +356,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-05-18</p>
                         <p>발견장소 : 경북 경산시</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="푸들" data-gender="암컷" data-lostdate="2024-06-18">
 
                     <img src="boho/bohoimg/lang14.jpeg" alt="Image 14">
@@ -366,9 +373,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-06-18</p>
                         <p>발견장소 : 울산 중구 향교</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="푸들" data-gender="수컷" data-lostdate="2024-07-24">
 
                     <img src="boho/bohoimg/lang15.jpeg" alt="Image 15">
@@ -382,8 +390,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-07-24</p>
                         <p>발견장소 : 전북 장수군 뒷편</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 여섯 번째 줄 -->
@@ -400,9 +408,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-07-09</p>
                         <p>발견장소 : 부산 동래구 온천동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-01-11">
 
                     <img src="boho/bohoimg/lang17.jpg" alt="Image 17">
@@ -416,10 +425,9 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-01-11</p>
                         <p>발견장소 : 경산 마산 야구장</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
-
 
                 <div class="gallery-item" data-location="시바" data-gender="수컷" data-lostdate="2024-02-01">
                     <a href="detail.html">
@@ -434,6 +442,7 @@
                             <!-- <p>성별 : 수컷</p> -->
                             <p>발견날짜 :2024-02-01</p>
                             <p>발견장소 : 전북 남원</p>
+                            <p style="display: none;">어쩌구저쩌구 상세설명</p>
                         </figcaption>
                     </a>
                 </div>
@@ -453,10 +462,9 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-03-11</p>
                         <p>발견장소 : 대전 전민동 삼거리</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
-
 
                 <div class="gallery-item" data-location="포메라니안" data-gender="수컷" data-lostdate="2024-04-27">
 
@@ -471,9 +479,9 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-04-27</p>
                         <p>발견장소 : 울산 북구 매곡동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
-
 
                 <div class="gallery-item" data-location="푸들" data-gender="수컷" data-lostdate="2024-05-01">
 
@@ -488,8 +496,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-05-01</p>
                         <p>발견장소 : 경기 남양주</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 일곱 번째 줄 -->
@@ -506,10 +514,9 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-06-21</p>
                         <p>발견장소 : 서울 성북구 돈암초</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
-
 
                 <div class="gallery-item" data-location="진돗개" data-gender="수컷" data-lostdate="2024-07-07">
 
@@ -524,6 +531,7 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-07-07</p>
                         <p>발견장소 : 전북 남원시</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
                 </div>
 
@@ -540,8 +548,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-01-04</p>
                         <p>발견장소 : 경북 경산홍보관</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 여덟 번째 줄 -->
@@ -558,8 +566,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-02-14</p>
                         <p>발견장소 : 경기 향남2지구</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-03-07">
@@ -575,10 +583,9 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-03-07</p>
                         <p>발견장소 : 충북 음성군</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
-
 
                 <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-04-01">
 
@@ -593,8 +600,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-04-01</p>
                         <p>발견장소 : 경기 오산동 궐동</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 아홉 번째 줄 -->
@@ -611,7 +618,7 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-05-01</p>
                         <p>발견장소 : 경기 평택시</p>
-
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                 </div>
 
                 <div class="gallery-item" data-location="비숑" data-gender="수컷" data-lostdate="2024-06-17">
@@ -627,8 +634,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-06-17</p>
                         <p>발견장소 : 인천 인주대로</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-07-02">
@@ -644,8 +651,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-07-02</p>
                         <p>발견장소 : 대구 남구 현짬뽕 부근</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <!-- 열 번째 줄 -->
@@ -662,8 +669,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-07-07</p>
                         <p>발견장소 : 경기 일산 밤가시공원</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-06-02">
@@ -679,8 +686,8 @@
                         <!-- <p>성별 : 수컷</p> -->
                         <p>발견날짜 :2024-06-02</p>
                         <p>발견장소 : 경기 덕양구</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="래브라도리트리버" data-gender="암컷" data-lostdate="2024-05-17">
@@ -696,9 +703,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-05-17</p>
                         <p>발견장소 : 서울 뚝섬공원</p>
+                        <p style="display: none;">어쩌구저쩌구 상세설명</p>
                     </figcaption>
-
                 </div>
+
                 <!-- 열 한번 째 줄 -->
                 <div class="gallery-item" data-location="래브라도리트리버" data-gender="암컷" data-lostdate="2024-04-17">
 
@@ -713,8 +721,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-04-17</p>
                         <p>발견장소 : 인천 검단사거리</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-03-17">
@@ -730,8 +738,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-03-17</p>
                         <p>발견장소 : 전북 임실군</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="보더콜리" data-gender="암컷" data-lostdate="2024-02-17">
@@ -747,9 +755,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-02-17</p>
                         <p>발견장소 : 서울 한신아파트</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
+
                 <!-- 열 두번째 줄 -->
                 <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-01-17">
 
@@ -764,9 +773,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-01-17</p>
                         <p>발견장소 : 서울 노원구 공릉2동</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
+
                 <!-- 열 세번째 줄 -->
                 <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-01-29">
 
@@ -781,8 +791,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-01-29</p>
                         <p>발견장소 : 경북 경산 남천면</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-02-19">
@@ -798,8 +808,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-02-19</p>
                         <p>발견장소 : 경기 남양주 일패동</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="포메라니안" data-gender="암컷" data-lostdate="2024-03-23">
@@ -815,8 +825,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-03-23</p>
                         <p>발견장소 : 경기광주 태전동</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="말티즈" data-gender="암컷" data-lostdate="2024-04-15">
@@ -832,9 +842,10 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-04-15</p>
                         <p>발견장소 : 경북 포항시 흥해읍</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
+
                 <!-- 열 네번째 줄 -->
                 <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-05-26">
 
@@ -849,8 +860,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-05-26</p>
                         <p>발견장소 : 구미사랑분식 앞</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-06-13">
@@ -866,8 +877,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-06-13</p>
                         <p>발견장소 : 인천 남동구</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
                 <div class="gallery-item" data-location="포메라니안" data-gender="암컷" data-lostdate="2024-07-01">
@@ -883,8 +894,8 @@
                         <!-- <p>성별 : 암컷</p> -->
                         <p>발견날짜 :2024-07-01</p>
                         <p>발견장소 : 서울 용산구 후암동</p>
+                        <p style="display: none;">상세설명 : </p>
                     </figcaption>
-
                 </div>
 
             </div>
@@ -969,5 +980,33 @@
     </div>
 </div>
 </div>
+<form action="boho3.html" id="bohoForm" method="get">
+    <input type="text" name="dogImg" id="dogImg">
+    <input type="text" name="per" id="per">
+    <input type="text" name="num" id="num">
+    <input type="text" name="breed" id="breed">
+    <input type="text" name="findD" id="findD">
+    <input type="text" name="findL" id="findL">
+    <input type="text" name="chara" id="chara">
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelectorAll(".gallery-item").forEach(function(item) {
+                item.addEventListener("click", function() {
+                    let figcaption = this.querySelector('figcaption');
+                    document.getElementById('per').value = figcaption.querySelector('p:nth-child(1)').innerText;
+                    document.getElementById('num').value = figcaption.querySelector('p:nth-child(2)').innerText;
+                    document.getElementById('breed').value = figcaption.querySelector('p:nth-child(3)').innerText;
+                    document.getElementById('findD').value = figcaption.querySelector('p:nth-child(4)').innerText;
+                    document.getElementById('findL').value = figcaption.querySelector('p:nth-child(5)').innerText;
+                    document.getElementById('chara').value = figcaption.querySelector('p:nth-child(6)').innerText;
+
+                    document.getElementById('dogImg').value = this.querySelector('img').src;
+
+                    document.getElementById('bohoForm').submit();
+                });
+            });
+        });
+    </script>
+</form>
 </html>
