진비 : 상세페이지 테마색상 변경

--- a/boho.html
+++ b/boho.html
@@ -980,7 +980,7 @@
     </div>
 </div>
 </div>
-<form action="boho3.html" id="bohoForm" method="get">
+<form action="boho3.html" id="bohoForm" method="get" style="display: none;">
     <input type="text" name="dogImg" id="dogImg">
     <input type="text" name="per" id="per">
     <input type="text" name="num" id="num">
