--- a/findDog.html
+++ b/findDog.html
@@ -779,7 +779,7 @@
            <script src="js/findDog.js"></script>
     </div>
 
-    <form action="findDog3.html" id="findForm" method="get">
+    <form action="findDog3.html" id="findForm" method="get" style="display: none;">
         <input type="text" name="dogImg" id="dogImg">
         <input type="text" name="per" id="per">
         <input type="text" name="num" id="num">
