석현 : mypage html 오타 수정

--- a/mypage.html
+++ b/mypage.html
@@ -35,7 +35,7 @@
           </nav>
           <nav id="sidetap">
             <ul>
-              <li>마이페이지</li></a>&nbsp;&nbsp;&nbsp;ㄴ
+              <li>마이페이지</li></a>&nbsp;&nbsp;&nbsp;
                 <li id="logout">로그아웃</li>
               <!-- <a href="signUp.html" id="signin"> -->
             </ul>
