--- a/mypage.html
+++ b/mypage.html
@@ -54,13 +54,13 @@
                 <table>
                     <tr>
                         <th>이름</th>
-                        <td><input type="text" name="name" id="name" disabled placeholder="필수 입력 사항입니다." value="류석현"></td>
+                        <td><input type="text" name="name" id="name" disabled placeholder="필수 입력 사항입니다." value="류석현" style="color: black;"></td>
                         <input type="hidden" name="name2" id="name2" value="">
                     </tr>
                     <tr>
                         <th>전화번호</th>
                         <td>
-                            <input type="text" name="phone" id="phone" pattern="[0-9]{10,11}" placeholder="전화번호를 입력하세요.(-)제외." disabled value="01012341234">
+                            <input type="text" name="phone" id="phone" pattern="[0-9]{10,11}" placeholder="전화번호를 입력하세요.(-)제외." disabled value="01012341234" style="color: black";>
                             <input type="button" id="phone_button" value="변경" onclick="change_phone();">
                         </td>
                         <input type="hidden" name="phone2" id="phone2" value="">
@@ -68,19 +68,19 @@
 
                     <tr>
                         <th>Email</th>
-                        <td><input type="text" name="email" id="email" placeholder="이메일을 @포함 모두 입력해주세요." disabled value="kyoungwon199@naver.com">
+                        <td><input type="text" name="email" id="email" placeholder="이메일을 @포함 모두 입력해주세요." disabled value="kyoungwon199@naver.com" style="color: black";>
                             <input type="button" id="email_button" value="변경" onclick="change_email();"></td>
                         <input type="hidden" name="email2" id="email2" value="">
                     </tr>
 
                     <tr>
                         <th>ID</th>
-                        <td><input type="text" id="id" name="id" disabled value="DaDog0123" aria-readonly="true"></td>
+                        <td><input type="text" id="id" name="id" disabled value="DaDog0123" aria-readonly="true" style="color: black";></td>
                     </tr>
 
                     <tr>
                         <th>PW</th>
-                        <td><input type="password" name="pw" id="pw" placeholder="변경 버튼을 눌러주세요." disabled value="123456">
+                        <td><input type="password" name="pw" id="pw" placeholder="변경 버튼을 눌러주세요." disabled value="123456" style="color: black";>
                             <input type="button" id="pw_button" value="변경" onclick="showPasswordModal();"></td>
                         <input type="hidden" name="pw2" id="pw2" value="">
                     </tr>
@@ -89,6 +89,7 @@
             </form>
         </div>
 
+      
         <!-- 비밀번호 변경 모달 -->
         <div id="passwordModal" class="modal">
             <div class="modal-content">
