--- a/mypage.html
+++ b/mypage.html
@@ -99,10 +99,10 @@
                     <label for="currentPassword">현재 비밀번호:</label>
                     <input type="password" id="currentPassword" name="currentPassword" required>
 
-                    <label for="newPassword">새 비밀번호:</label>
+                    <label for="newPassword">새 비밀번호(최소 6자 이상):</label>
                     <input type="password" id="newPassword" name="newPassword" required>
 
-                    <label for="confirmPassword">새 비밀번호 확인:</label>
+                    <label for="confirmPassword">새 비밀번호 확인(최소 6자 이상):</label>
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
 
                     <button type="button" onclick="submitPasswordChange()">확인</button>
