--- a/boho3.html
+++ b/boho3.html
@@ -40,11 +40,14 @@
       </section>
       <section id="dogInfo">
         <section id="infoLeft">
-          <div id="person"></div>
-          <div id="phoneNum"></div>
-          <div id="dogBreed"></div>
-          <div id="findDate"></div>
-          <div id="findLocation"></div>
+          <p id="leftTitle">기본정보</p>
+          <div id="information1">
+            <div id="person"></div>
+            <div id="phoneNum"></div>
+            <div id="dogBreed"></div>
+            <div id="findDate"></div>
+            <div id="findLocation"></div>
+          </div>
         </section>
         <section id="infoRight">
           <p id="rightTitle">상세설명</p>
