석현 : boho html 문구 수정

--- a/boho.html
+++ b/boho.html
@@ -61,7 +61,7 @@
     <hr>
     
     <ul class="hc">
-        <li>유기견보호센터 유기동물 보호중 입니다.</li>
+        <li>유기동물 보호중 입니다.</li>
         <li>유기동물 등록은 <a href="/front/awtis/login/login.do?menuNo=8000200006"
                 style="text-decoration: none; color: blue;">로그인</a> 후 가능합니다.
         </li>
