성현 : 최종 시연 홈페이지

--- a/findDog3.html
+++ b/findDog3.html
@@ -67,6 +67,14 @@
         let lostLs = param.get('lostL');
         let charas = param.get('chara');
 
+        console.log(dogImages);
+        console.log(pers);
+        console.log(nums);
+        console.log(breeds);
+        console.log(lostDs);
+        console.log(lostLs);
+        console.log(charas);
+
         $('#dogImg').attr('src', dogImages);
         $('#person').text(pers);
         $('#phoneNum').text(nums);
