--- a/wishList.html
+++ b/wishList.html
@@ -20,8 +20,8 @@
     </nav>
     <nav id="sidetap">
       <ul>
-        <li id="login">로그인</li>
-        <a href="signUp.html" id="signin"><li>회원가입</li></a>
+        <li id="login">로그아웃</li>
+        <a href="mypage.html" id="signin"><li>마이페이지</li></a>
       </ul>
     </nav>
   </header>
