성현 : 어드민 관리 페이지 제작

--- a/administration.html
+++ b/administration.html
@@ -33,10 +33,208 @@
   </header>
   <main>
     <article id="sidemenu">
-
+      <ul> <h1>통합관리</h1>
+        <li>회원 관리</li>
+        <li>입양 단계 처리</li>
+      </ul>
     </article>
-    <article id="Management">
-      
+    <article id="userManagement" class="contentManage">
+      <section class="right1">
+        <h2>회원관리</h2> 
+        <div id="input"><input type="text" name="userName" placeholder="이름 입력"> <button>검색</button></div>
+      </section>
+      <section class="right2">
+          <ul id="userHeader">
+            <li class="li0"><input type="checkbox" id="alluserCheck" class="userCheck"></li>
+            <li class="li1">이름</li>
+            <li class="li2">아이디</li>
+            <li class="li3">이메일</li>
+            <li class="li4">전화번호</li>
+            <li class="li5">비밀번호</li>
+          </ul>
+        <div id="userContent" class="rightBody">
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+          <ul>
+            <li class="li0"><input type="checkbox" class="userCheck"></li>
+            <li class="li1">김준선</li>
+            <li class="li2">tjrgus123</li>
+            <li class="li3">tjrgus123@naver.com</li>
+            <li class="li4">010-1234-1234</li>
+            <li class="li5">tjrgusWKdWKd11!!</li>
+            <li class="li6"><input type="button" value="회원삭제" class="deleteUser"></li>
+          </ul>
+        </div>
+      </section>
     </article>
   </main>
 </body>
