--- a/wishList.html
+++ b/wishList.html
@@ -21,7 +21,7 @@
     <nav id="sidetap">
       <ul>
         <li id="login">로그아웃</li>
-        <a href="mypage.html" id="signin"><li>마이페이지</li></a>
+        <a href="member.html" id="signin"><li>마이페이지</li></a>
       </ul>
     </nav>
   </header>
