진비 : 헤더 찜목록 링크 수정

--- a/mypage.html
+++ b/mypage.html
@@ -29,7 +29,7 @@
                 <li>실종신고</li></a>
               <a href="boho.html">
                 <li>보호중</li></a>
-              <a href="wishList.html">
+              <a href="list.html">
                 <li>찜목록</li></a>
             </ul>
           </nav>
