--- a/findDog.html
+++ b/findDog.html
@@ -28,8 +28,8 @@
             <li>실종신고</li></a>
           <a href="boho.html">
             <li>보호중</li></a>
-          <a href="wishList.html">
-            <li>찜목록</li></a>
+          <a href="list.html">
+              <li>찜목록</li></a>
         </ul>
       </nav>
       <nav id="sidetap">
