--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
         <a href="adopt.html"><li>입양하기</li></a>
         <a href="findDog.html"><li>실종신고</li></a>
         <a href="boho.html"><li>보호중</li></a>
-        <a href="wishList.html"><li>찜목록</li></a>
+        <a href="list.html"><li>찜목록</li></a>
       </ul>
     </nav>
     <nav id="sidetap">
